# ASTRO-2024

./: .CMakeLists.txt [conflicted].swp  CMakeLists.txt  README.md  test.c
ASTRO/: RecieveforPayload.ino  astro.ino  config.h  functions.cpp  platformio.ini
ASTRO-GPS/: platformio.ini
ASTRO-GPS/src/: astro.cpp  config.h  functions.cpp
ASTRO-GROUND/: astro-ground.ino  config.h  functions.cpp
ASTRO-PICO-SDK/: CMakeLists.txt
ASTRO-Reciever/: platformio.ini
ASTRO-Reciever/src/: ASTROReciever.cpp
ASTRO-Subscale/src/: astro-dummy.cpp  config.h  functions.cpp
ASTRO/ASTRO-GROUND/: astro-ground.ino
ASTRO/src/: astro.cpp  config.h  functions.cpp
src/: astro.cpp  config.h
